load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "process",
    srcs = [
        "ansi.go",
        "buffer.go",
        "cat.go",
        "format.go",
        "process.go",
        "pty.go",
        "pty_windows.go",
        "run.go",
        "scanner.go",
        "signal.go",
        "signal_windows.go",
        "timestamper.go",
    ],
    importpath = "github.com/buildkite/agent/v3/process",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/experiments",
        "//logger",
        "@org_golang_x_term//:term",
    ] + select({
        "@rules_go//go/platform:aix": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:android": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:darwin": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:dragonfly": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:freebsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:illumos": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:ios": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:js": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:linux": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:netbsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:openbsd": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:osx": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:plan9": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:qnx": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:solaris": [
            "@com_github_creack_pty//:pty",
            "@org_golang_x_sys//unix",
        ],
        "@rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "process_test",
    srcs = [
        "ansi_test.go",
        "buffer_test.go",
        "main_test.go",
        "process_test.go",
        "scanner_test.go",
        "signal_test.go",
        "timestamper_test.go",
    ],
    embed = [":process"],
    deps = [
        "//internal/experiments",
        "//logger",
        "@com_github_google_go_cmp//cmp",
        "@com_github_stretchr_testify//assert",
    ],
)
