load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redaction",
    srcs = ["redactor.go"],
    importpath = "github.com/buildkite/agent/v3/redaction",
    visibility = ["//visibility:public"],
    deps = ["//bootstrap/shell"],
)

go_test(
    name = "redaction_test",
    srcs = ["redactor_test.go"],
    embed = [":redaction"],
)

alias(
    name = "go_default_library",
    actual = ":redaction",
    visibility = ["//visibility:public"],
)
