load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "system",
    srcs = [
        "doc.go",
        "version_dump.go",
        "version_dump_windows.go",
    ],
    importpath = "github.com/buildkite/agent/v3/system",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:aix": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//logger",
            "//process",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//logger",
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

alias(
    name = "go_default_library",
    actual = ":system",
    visibility = ["//visibility:public"],
)
