load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tracetools",
    srcs = [
        "doc.go",
        "propagate.go",
        "span.go",
    ],
    importpath = "github.com/buildkite/agent/v3/tracetools",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/ext",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_test(
    name = "tracetools_test",
    srcs = [
        "propagate_example_test.go",
        "propagate_test.go",
        "span_test.go",
    ],
    embed = [":tracetools"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//log",
        "@com_github_opentracing_opentracing_go//mocktracer",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_datadog_dd_trace_go_v1//ddtrace/tracer",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//codes",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@io_opentelemetry_go_otel_trace//embedded",
    ],
)
