load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "yamltojson",
    srcs = ["yaml.go"],
    importpath = "github.com/buildkite/agent/v3/yamltojson",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "yamltojson_test",
    srcs = ["yaml_test.go"],
    embed = [":yamltojson"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

alias(
    name = "go_default_library",
    actual = ":yamltojson",
    visibility = ["//visibility:public"],
)
