load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "integration",
    srcs = ["test_helpers.go"],
    importpath = "github.com/buildkite/agent/v3/agent/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//agent",
        "//api",
        "//internal/ptr",
        "//logger",
        "//metrics",
        "@com_github_buildkite_bintest_v3//:bintest",
        "@com_github_lestrrat_go_jwx_v2//jwk",
    ],
)

go_test(
    name = "integration_test",
    srcs = [
        "config_allowlisting_integration_test.go",
        "job_environment_integration_test.go",
        "job_runner_integration_test.go",
        "job_verification_integration_test.go",
        "main_test.go",
    ],
    embed = [":integration"],
    deps = [
        "//agent",
        "//api",
        "//clicommand",
        "//logger",
        "//version",
        "@com_github_buildkite_bintest_v3//:bintest",
        "@com_github_buildkite_go_pipeline//:go-pipeline",
        "@com_github_buildkite_go_pipeline//signature",
        "@com_github_lestrrat_go_jwx_v2//jwk",
        "@com_github_urfave_cli//:cli",
        "@tools_gotest_v3//assert",
    ],
)
