load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "agentedge_v1_proto",
    srcs = ["agentedge.proto"],
    visibility = ["//visibility:public"],
    deps = ["//buf/validate:validate_proto"],
)

go_proto_library(
    name = "agentedge_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc_v2"],
    importpath = "github.com/buildkite/agent/v3/api/proto",
    proto = ":agentedge_v1_proto",
    visibility = ["//visibility:public"],
    deps = ["//buf/validate:validate_proto"],
)

go_library(
    name = "proto",
    embed = [":agentedge_v1_go_proto"],
    importpath = "github.com/buildkite/agent/v3/api/proto",
    visibility = ["//visibility:public"],
)
